--- a/app/globals.css
+++ b/app/globals.css
@@ -16,26 +16,39 @@ body {
   position: absolute;
   background: white;
   border-radius: 50%;
-  opacity: 0.8;
+  opacity: 0.6;
   animation: twinkle 2s infinite ease-in-out alternate;
 }
 
-/* ランダムな星の配置 */
-.star:nth-child(1) { top: 5%; left: 10%; width: 2px; height: 2px; animation-delay: 0s; }
-.star:nth-child(2) { top: 20%; left: 80%; width: 3px; height: 3px; animation-delay: 1s; }
-.star:nth-child(3) { top: 50%; left: 40%; width: 1.5px; height: 1.5px; animation-delay: 0.5s; }
-.star:nth-child(4) { top: 70%; left: 60%; width: 2.5px; height: 2.5px; animation-delay: 1.2s; }
-.star:nth-child(5) { top: 85%; left: 25%; width: 3px; height: 3px; animation-delay: 2s; }
-.star:nth-child(6) { top: 15%; left: 50%; width: 1px; height: 1px; animation-delay: 0.8s; }
-.star:nth-child(7) { top: 40%; left: 75%; width: 2px; height: 2px; animation-delay: 2.5s; }
-.star:nth-child(8) { top: 60%; left: 15%; width: 3px; height: 3px; animation-delay: 1.6s; }
-.star:nth-child(9) { top: 30%; left: 30%; width: 1px; height: 1px; animation-delay: 1.1s; }
-.star:nth-child(10) { top: 90%; left: 70%; width: 2px; height: 2px; animation-delay: 2.8s; }
+/* 40個ランダム配置 */
+.star:nth-child(odd) {
+  width: 2px;
+  height: 2px;
+  animation-duration: 2s;
+}
+.star:nth-child(even) {
+  width: 3px;
+  height: 3px;
+  animation-duration: 3s;
+}
+
+/* ランダム配置を広範囲でばらけさせる */
+.star:nth-child(1n) { top: 5%; left: 10%; }
+.star:nth-child(2n) { top: 15%; left: 80%; }
+.star:nth-child(3n) { top: 25%; left: 50%; }
+.star:nth-child(4n) { top: 35%; left: 20%; }
+.star:nth-child(5n) { top: 45%; left: 70%; }
+.star:nth-child(6n) { top: 55%; left: 30%; }
+.star:nth-child(7n) { top: 65%; left: 85%; }
+.star:nth-child(8n) { top: 75%; left: 40%; }
+.star:nth-child(9n) { top: 85%; left: 60%; }
+.star:nth-child(10n) { top: 95%; left: 25%; }
 
 @keyframes twinkle {
-  0%, 100% { opacity: 0.1; transform: scale(1); }
+  0%, 100% { opacity: 0.2; transform: scale(1); }
   50% { opacity: 1; transform: scale(1.5); }
 }
+
 
 /* ガラス調カード */
 .glass-highlight {
